k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wobot-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: asia-south1-docker.pkg.dev/project-5cd4ac48-f231-4722-ae1/docker-repo/backend:latest
        ports:
        - containerPort: 8080
