k8s/frontend-deploy-primary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-primary
  namespace: wobot-app
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        version: primary
    spec:
      containers:
      - name: frontend
        image: asia-south1-docker.pkg.dev/project-5cd4ac48-f231-4722-ae1/docker-repo/frontend:latest
        ports:
        - containerPort: 8080
