k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: wobot-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
